# Tilegym

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  format.sh  pyproject.toml  pytest.ini  setup.py
.github/: copy-pr-bot.yaml  infra_overview.md  pull_request_template.md
.github/infra_tests/: test_check_benchmark_regression.py  test_check_image_exists.py  test_check_spdx_headers.py  test_cleanup_stale_images.py  test_format_benchmark_summary.py  test_neutral_zone.py  test_parse_pr_config.py  test_selective_baseline_merge.py  test_utils.py
.github/scripts/: check_benchmark_regression.py  check_image_exists.py  check_spdx_headers.py  cleanup_stale_images.py  format_benchmark_summary.py  merge_baseline_selective.py  parse_pr_config.py  utils.py
.github/workflows/: build-wheel.yml  publish-wheel.yml  retry-provisioning-failures-tilegym.yml  retry-provisioning-failures.yml  tilegym-ci-infra-tests.yml  tilegym-ci.yml  tilegym-ghcr-cleanup.yml
.project/: spec.yaml
LICENSES/: ATTRIBUTIONS.md  CLA.md
modeling/transformers/: Dockerfile  README.md  bench_deepseek.sh  bench_llama.sh  bench_qwen.sh  build_docker.sh  infer.py
src/tilegym/: __init__.py  logger.py
tests/: common.py  config.py  conftest.py
tests/benchmark/: README.md  bench_fused_attention.py  bench_group_gemm.py  bench_matrix_multiplication.py  bench_mix_triton_cutile.py  bench_mla.py  bench_mla_decoding.py  bench_persistent_matmul.py  bench_rmsnorm.py  bench_rope.py  bench_silu_and_mul.py  bench_softmax.py  bench_swiglu.py  run_all.sh  run_all_json.py
tests/ops/: test_attention.py  test_matmul.py  (+13 more)
(+37 files in other folders)
