# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
force_single_line = true
extra_standard_library = ["pkg_resources"]

[tool.pylint]
disable = [
   "missing-function-docstring",
   "missing-class-docstring",
   "missing-module-docstring",
   "broad-except",
   "invalid-name",
   "logging-fstring-interpolation",
   ]
generated-members = "numpy.*, torch.*"

[tool.pytest.ini_options]
junit_family = "xunit1"
